[package]
name = "justorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1"
serde = {version = "1", features = ["derive"]}
serde_bytes = "0.11.12"   # for dealing with bytes  
serde_urlencoded="0.7"           
tokio = {version = "1", features = ["full"]}
tokio-util = "0.7"
sha1 = "0.10.1"
clap = {version = "4.0", features = ["derive"]}
anyhow = "1.0"
reqwest = {version = "0.12", features = ["json","blocking"]}
serde_bencode = "0.2"
hex = "0.4.3"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = { version = "0.3", features = ["sink"] }